GloablServices/keshavglobal/force-app/main/default/objects/Integration_Request__c/fields/API_Response__c.field-meta.xml
<CustomField>
    <fullName>API_Response__c</fullName>
    <description>To store the raw API response</description>
    <label>API Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>