GloablServices/keshavglobal/force-app/main/default/objects/Integration_Request__c/fields/First_Run_Time__c.field-meta.xml
<CustomField>
    <fullName>First_Run_Time__c</fullName>
    <label>First Run Time</label>
    <type>DateTime</type>
</CustomField>