GloablServices/keshavglobal/force-app/main/default/objects/Integration_Request__c/fields/IntegrationFamily__c.field-meta.xml
<CustomField>
    <fullName>IntegrationFamily__c</fullName>
    <label>IntegrationFamily</label>
    <length>80</length>
    <type>Text</type>
</CustomField>