GloablServices/keshavglobal/force-app/main/default/objects/Integration_Request__c/fields/IntegrationSubFamily__c.field-meta.xml
<CustomField>
    <fullName>IntegrationSubFamily__c</fullName>
    <label>IntegrationSubFamily</label>
    <length>80</length>
    <type>Text</type>
</CustomField>