GloablServices/keshavglobal/force-app/main/default/objects/Integration_Request__c/fields/Next_Run_Time__c.field-meta.xml
<CustomField>
    <fullName>Next_Run_Time__c</fullName>
    <label>Next Run Time</label>
    <type>DateTime</type>
</CustomField>