GloablServices/keshavglobal/force-app/main/default/objects/Integration_Request__c/fields/Reprocess__c.field-meta.xml
<CustomField>
    <fullName>Reprocess__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reprocess</label>
    <type>Checkbox</type>
</CustomField>