GloablServices/keshavglobal/force-app/main/default/objects/Integration_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>IntegrationFamily__c</columns>
    <columns>IntegrationSubFamily__c</columns>
    <columns>IntegrationLogId__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>