GloablServices/keshavglobal/force-app/main/default/objects/Integration_Request__c/listViews/All_Document_Attachment_Requests.listView-meta.xml
<ListView>
    <fullName>All_Document_Attachment_Requests</fullName>
    <columns>NAME</columns>
    <columns>IntegrationFamily__c</columns>
    <columns>IntegrationSubFamily__c</columns>
    <columns>IntegrationLogId__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Next_Run_Time__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IntegrationSubFamily__c</field>
        <operation>contains</operation>
        <value>ATTACHMENT</value>
    </filters>
    <label>All Document Attachment Requests</label>
</ListView>